@@ -2,6 +2,11 @@
 // $Id$
 
 /**
+ * @file
+ * Install, update, and uninstall functions for the Bot module.
+ */
+
+/**
  * Implementation of hook_uninstall().
  */
 function bot_uninstall() {
